--- a/index.html
+++ b/index.html
@@ -1,212 +1,296 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Bohdana Lutska is a front-end developer based in Ukraine, check out her projects and contact her for job inquiries">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Bohdana Lutska is a front-end developer based in Ukraine, check out her projects and contact her for job inquiries"
+    />
     <title>Front-end developer - Bohdana Lutska</title>
-    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
 
-
-<body>
-
+  <body>
     <header class="header">
-        <div class="container">
-            <div class="header__top">
-                <nav class="header__nav">
-                    <ul class="header__list">
-                        <li class="header__item active"><a class="header__link" href="#">Home</a></li>
-                        <li class="header__item"><a class="header__link" title="About Bohdana Lutska"
-                                href="#about">About me</a></li>
-                        <li class="header__item"><a class="header__link" title="Bohdana Lutska's skills"
-                                href="#skils">Skils</a></li>
-                        <li class="header__item"><a class="header__link" title="Bohdana Lutska's portfolio"
-                                href="#portfolio">Portfolio</a></li>
-                        <li class="header__item"><a class="header__link" title="Contact with Bohdana Lutska"
-                                href="#contacts">Contacts</a></li>
-                    </ul>
-                </nav>
-                <div class="mode">
-                    <ul class="mode__list">
-                        <li class="mode__item active">
-                            <i class="fa-solid fa-sun" aria-label="Light theme"></i>
-                        </li>
-                        <li class="mode__item "> <i class="fa-solid fa-moon" aria-label="Dark theme"></i> </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="header__bottom">
-                <h1 class="header__title">
-                    Bohdana <br>
-                    Lutska
-                </h1>
-                <h2 class="header__subtitle">
-                    Frontend Developer<br>
-                    Ivano-Frankivsk
-                </h2>
-                <div class="mode mode--revers">
-                    <ul class="mode__list">
-                        <li class="mode__item  active">
-                            <i class="fa-solid fa-sun" aria-label="Light theme"></i>
-                        </li>
-                        <li class="mode__item">
-                            <i class="fa-solid fa-moon" aria-label="Dark theme"></i>
-                        </li>
-                    </ul>
-                </div>
-
-                <button class="burger" type="button" aria-label="Open menu">
-                    <span class="burger-line"></span>
-                </button>
-            </div>
-            <div class="header__img">
-                <img class="img" src="images/bg.jpg" alt="Picture Front-end">
-            </div>
-
+      <div class="container">
+        <div class="header__top">
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item active">
+                <a class="header__link" href="#">Home</a>
+              </li>
+              <li class="header__item">
+                <a
+                  class="header__link"
+                  title="About Bohdana Lutska"
+                  href="#about"
+                  >About me</a
+                >
+              </li>
+              <li class="header__item">
+                <a
+                  class="header__link"
+                  title="Bohdana Lutska's skills"
+                  href="#skils"
+                  >Skils</a
+                >
+              </li>
+              <li class="header__item">
+                <a
+                  class="header__link"
+                  title="Bohdana Lutska's portfolio"
+                  href="#portfolio"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header__item">
+                <a
+                  class="header__link"
+                  title="Contact with Bohdana Lutska"
+                  href="#contacts"
+                  >Contacts</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <div class="mode">
+            <ul class="mode__list">
+              <li class="mode__item active">
+                <i class="fa-solid fa-sun" aria-label="Light theme"></i>
+              </li>
+              <li class="mode__item">
+                <i class="fa-solid fa-moon" aria-label="Dark theme"></i>
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="header__bottom">
+          <h1 class="header__title">
+            Bohdana <br />
+            Lutska
+          </h1>
+          <h2 class="header__subtitle">
+            Frontend Developer<br />
+            Ivano-Frankivsk
+          </h2>
+          <div class="mode mode--revers">
+            <ul class="mode__list">
+              <li class="mode__item active">
+                <i class="fa-solid fa-sun" aria-label="Light theme"></i>
+              </li>
+              <li class="mode__item">
+                <i class="fa-solid fa-moon" aria-label="Dark theme"></i>
+              </li>
+            </ul>
+          </div>
+
+          <button class="burger" type="button" aria-label="Open menu">
+            <span class="burger-line"></span>
+          </button>
+        </div>
+        <div class="header__img">
+          <img class="img" src="images/bg.jpg" alt="Picture Front-end" />
+        </div>
+      </div>
     </header>
 
     <main>
+      <section class="about padding" id="about">
+        <div class="container container--small">
+          <h2 class="about__title title">About me</h2>
+          <div class="about__content">
+            <p>👋 Hi, I'm Bohdana – Junior Frontend Developer.</p>
+            <p>
+              I suppose that a flexibility of thinking, a tendency to
+              self-organization will help me to realize myself in developing.
+            </p>
+            <p>I am always eager to learn from anyone and everyone.</p>
+          </div>
+        </div>
+      </section>
 
-        <section class="about padding" id="about">
-            <div class="container container--small">
-                <h2 class="about__title title">About me</h2>
-                <div class="about__content">
-                    <p>
-                        👋 Hi, I'm Bohdana – Junior Frontend Developer.
-                    </p>
-                    <p>
-                        I suppose that a flexibility of thinking, a tendency to self-organization
-                        will help me to realize myself in developing.
-                    </p>
-                    <p>
-                        I am always eager to learn from anyone and everyone.
-                    </p>
-                </div>
-            </div>
-        </section>
+      <section class="skills padding" id="skils">
+        <div class="container container--small">
+          <h2 class="skils__title title">Skils</h2>
+          <h3 class="skils__subtitle">I work in such programs as</h3>
+          <ul class="skils__list">
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-html5"></i>
+              <h4 class="skils__item-title line-clamp">HTML</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-css3-alt"></i>
+              <h4 class="skils__item-title line-clamp">CSS</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-square-js"></i>
+              <h4 class="skils__item-title line-clamp">JS</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-sass"></i>
+              <h4 class="skils__item-title line-clamp">SCSS</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-bootstrap"></i>
+              <h4 class="skils__item-title line-clamp">Bootstrap</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-vuejs"></i>
+              <h4 class="skils__item-title line-clamp">Vue.js</h4>
+            </li>
+            <li class="skils__item">
+              <i class="icon-brand fa-brands fa-react"></i>
+              <h4 class="skils__item-title line-clamp">React.js</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <section class="skills padding" id="skils">
-            <div class="container container--small">
-                <h2 class="skils__title title">Skils</h2>
-                <h3 class="skils__subtitle">
-                    I work in such programs as
-                </h3>
-                <ul class="skils__list">
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-html5"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            HTML
-                        </h4>
-                    </li>
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-css3-alt"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            CSS
-                        </h4>
-                    </li>
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-square-js"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            JS
-                        </h4>
-                    </li>
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-sass"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            SCSS
+      <section class="portfolio padding" id="portfolio">
+        <div class="container container--small">
+          <h2 class="portfolio__title title">Portfolio</h2>
+          <ul class="portfolio__list">
+            <li class="portfolio__item">
+              <img
+                class="portfolio__img"
+                src="images/flower-design.png"
+                alt="Photo my work - Flower-design - landing page"
+              />
 
-                        </h4>
-                    </li>
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-bootstrap"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            Bootstrap
-                        </h4>
-                    </li>
-                    <li class="skils__item">
-                        <i class="icon-brand fa-brands fa-vuejs"></i>
-                        <h4 class="skils__item-title line-clamp">
-                            Vue.js
-                        </h4>
-                    </li>
-                </ul>
-            </div>
-        </section>
+              <a
+                class="portfolio__link"
+                href="https://boisterous-yeot-113b44.netlify.app/"
+                target="_blank"
+              >
+                <span class="portfolio__work-name"> Flower design</span>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <img
+                class="portfolio__img"
+                src="images/weather-app.png"
+                alt="Photo my work - Weather-app"
+              />
+              <span class="portfolio__work-name"> Weather-app</span>
+              <a
+                class="portfolio__link"
+                href="https://candid-bonbon-8a5a1f.netlify.app/"
+                target="_blank"
+              >
+                JS
+              </a>
+              <span> /</span>
+              <a
+                class="portfolio__link"
+                href="https://chipper-fenglisu-be0c9e.netlify.app"
+                target="_blank"
+              >
+                React
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <img
+                class="portfolio__img"
+                src="images/shelter.png"
+                alt="Photo my work - Createx-site"
+              />
 
-        <section class="portfolio padding" id="portfolio">
-            <div class="container container--small">
-                <h2 class="portfolio__title title">Portfolio</h2>
-                <ul class="portfolio__list">
-                    <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/flower-design.png"
-                            alt="Photo my work - Flower-design - landing page">
-
-                        <a class="portfolio__link" href="https://boisterous-yeot-113b44.netlify.app/" target="_blank">
-                            <span class="portfolio__work-name"> Flower design</span>
-                        </a>
-                    </li>
-                    <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/weather-app.png" alt="Photo my work - Weather-app">
-                        <span class="portfolio__work-name"> Weather-app</span>
-                        <a class="portfolio__link" href="https://candid-bonbon-8a5a1f.netlify.app/" target="_blank">
-                            JS
-                        </a>
-                        <span> /</span>
-                        <a class="portfolio__link" href="https://chipper-fenglisu-be0c9e.netlify.app" target="_blank">
-                            React
-                        </a>
-                    </li>
-                    <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/createx-site.png" alt="Photo my work - Createx-site">
-                        <span class="portfolio__work-name"> Createx</span>
-                        <a class="portfolio__link" href="https://peppy-crumble-49fde6.netlify.app/" target="_blank">
-                            Vue.js
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-
+              <a
+                class="portfolio__link"
+                href="https://playful-torte-49e5f5.netlify.app/"
+                target="_blank"
+              >
+                <span class="portfolio__work-name">Shelter</span>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <img
+                class="portfolio__img"
+                src="images/createx-site.png"
+                alt="Photo my work - Createx-site"
+              />
+              <span class="portfolio__work-name"> Createx</span>
+              <a
+                class="portfolio__link"
+                href="https://peppy-crumble-49fde6.netlify.app/"
+                target="_blank"
+              >
+                Vue.js
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <img
+                class="portfolio__img"
+                src="images/restaurants.png"
+                alt="Photo my work - Createx-site"
+              />
+              <span class="portfolio__work-name">Restaurants</span>
+              <a
+                class="portfolio__link"
+                href="https://sprightly-bavarois-df986f.netlify.app/"
+                target="_blank"
+              >
+                React.js, TypeScript, Material UI
+              </a>
+            </li>
+          </в>
+        </div>
+      </section>
     </main>
     <footer class="footer padding" id="contacts">
-        <div class="container">
-            <h2 class="footer__title title">
-                Contacts 📬
-            </h2>
-            <h3 class="footer__subtitle">
-                Want to know more or just chat? You are welcome!
-            </h3>
-            <a href="mailto:bogdanalucka@gmail.com" class="footer__btn" type="button"
-                title="Send mail to Bogdana Lutska">Send message</a>
-            <ul class="footer__social">
-                <li class="footer__social-item">
-                    <a class="footer__social-link" href="https://www.linkedin.com/in/bohdana-lutska-28b497244/"
-                        target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                </li>
-                <li class="footer__social-item">
-                    <a class="footer__social-link" href="https://t.me/BohdanaLu" target="_blank">
-                        <i class="fa-brands fa-telegram"></i>
-                    </a>
-                </li>
-                <li class="footer__social-item">
-                    <a class="footer__social-link" href="https://github.com/bohdanalu" target="_blank">
-                        <i class="fa-brands fa-square-github"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
+      <div class="container">
+        <h2 class="footer__title title">Contacts 📬</h2>
+        <h3 class="footer__subtitle">
+          Want to know more or just chat? You are welcome!
+        </h3>
+        <a
+          href="mailto:bogdanalucka@gmail.com"
+          class="footer__btn"
+          type="button"
+          title="Send mail to Bogdana Lutska"
+          >Send message</a
+        >
+        <ul class="footer__social">
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://www.linkedin.com/in/bohdana-lutska-28b497244/"
+              target="_blank"
+              aria-label="Linkedin by Bohdana Lutska"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://t.me/BohdanaLu"
+              target="_blank"
+              aria-label="Telegram by Bohdana Lutska"
+            >
+              <i class="fa-brands fa-telegram"></i>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://github.com/bohdanalu"
+              target="_blank"
+              aria-label="GitHub by Bohdana Lutska"
+            >
+              <i class="fa-brands fa-square-github"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
 
-    <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/6d1a4a0b1e.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
