fix mistake in the  word

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   class="header__link"
                   title="Bohdana Lutska's skills"
                   href="#skils"
-                  >Skils</a
+                  >Skills</a
                 >
               </li>
               <li class="header__item">
