fix: correct the error in the word

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <section class="skills padding" id="skils">
         <div class="container container--small">
-          <h2 class="skils__title title">Skils</h2>
+          <h2 class="skils__title title">Skills</h2>
           <h3 class="skils__subtitle">I work in such programs as</h3>
           <ul class="skils__list">
             <li class="skils__item">
